--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,6 +1,6 @@
 on: ["push", "pull_request"]
 
-name: Test
+name: Main
 
 env:
   # ETHERSCAN_TOKEN:
@@ -12,6 +12,24 @@ env:
   NODE_OPTIONS: --max_old_space_size=4096
 
 jobs:
+
+  format:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        name: setup
+    
+    - name: Install dependencies
+      run: yarn --frozen-lockfile
+    
+    - name: Run formatter
+      run: yarn format:check
+
+    # TODO: Slither or some other static analysis tool
+
 
   tests:
     runs-on: ubuntu-latest
