--- a/vaults/brownie-config.yaml
+++ b/vaults/brownie-config.yaml
@@ -6,10 +6,10 @@ autofetch_sources: true
 
 compiler:
   solc:
-    version: 0.8.10
+    version: 0.8.12
     optimizer:
       enabled: true
-      runs: 9999
+      runs: 200
     remappings:
-      - "@openzeppelin=Openzeppelin/openzeppelin-contracts@4.4.2"
-      - "@oz-upgradeable=OpenZeppelin/openzeppelin-contracts-upgradeable@4.3.2"
+      - "@openzeppelin/contracts=Openzeppelin/openzeppelin-contracts@4.4.2/contracts"
+      - "@openzeppelin/contracts-upgradeable=OpenZeppelin/openzeppelin-contracts-upgradeable@4.3.2/contracts"
