--- a/hub/.vscode/settings.json
+++ b/hub/.vscode/settings.json
@@ -6,5 +6,6 @@
     "solidity.formatter": "prettier",
     "[solidity]": {
       "editor.defaultFormatter": "JuanBlanco.solidity"
-    }
+    },
+    "solidity.defaultCompiler": "remote"
 }  
