--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,11 @@
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
     "solidity.formatter": "prettier",
+    "solidity.compileUsingRemoteVersion" : "0.8.12",
     "[solidity]": {
-        "editor.defaultFormatter": "JuanBlanco.solidity"
-    }
+        "editor.defaultFormatter": "JuanBlanco.solidity",
+    },
+    "solidity.defaultCompiler": "remote",
+    "solidity.compileUsingLocalVersion": "/home/jordan/Documents/Dev/crypto/PieDAO/auxo-vaults/soljson-v0.8.12+commit.f00d7308.js",
+    
 }
