--- a/hub/package.json
+++ b/hub/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
+    "solc": "^0.8.15",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5"
   },
