--- a/hub/foundry.toml
+++ b/hub/foundry.toml
@@ -1,8 +1,8 @@
-[default]
+[profile.default]
 src = 'src'
 out = 'out'
 libs = ['lib']
-solc_version = "0.8.15"
+solc_version = "0.8.12"
 
 # Ignoring warnings that clutter test suite
 # 2519: shadowed declarations
