--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
     "[solidity]": {
         "editor.defaultFormatter": "JuanBlanco.solidity",
     },
-    "solidity.defaultCompiler": "remote",
+    "solidity.defaultCompiler": "localNodeModule",
     "solidity.compileUsingLocalVersion": "/home/jordan/Documents/Dev/crypto/PieDAO/auxo-vaults/soljson-v0.8.12+commit.f00d7308.js",
     
 }
