wip before refactor

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,11 @@
     "python.formatting.provider": "black",
     "editor.formatOnSave": true,
     "solidity.formatter": "prettier",
-    "solidity.compileUsingRemoteVersion" : "0.8.12",
+    "solidity.compileUsingRemoteVersion" : "v0.8.14+commit.80d49f37",
     "[solidity]": {
         "editor.defaultFormatter": "JuanBlanco.solidity",
     },
-    "solidity.defaultCompiler": "localNodeModule",
-    "solidity.compileUsingLocalVersion": "/home/jordan/Documents/Dev/crypto/PieDAO/auxo-vaults/soljson-v0.8.12+commit.f00d7308.js",
+    "solidity.defaultCompiler": "localFile",
+    "solidity.compileUsingLocalVersion": "/home/jordan/Documents/Dev/crypto/PieDAO/auxo-vaults/soljson-v0.8.14+commit.80d49f37.js",
     
 }
